# literec

./: ARCHITECTURE.md  README.md  README_zh.md  pyproject.toml  run.py
docs/superpowers/plans/: 2026-03-13-lite-rec.md  2026-03-17-dataset-download.md
docs/superpowers/specs/: 2026-03-13-lite-rec-design.md  2026-03-17-dataset-download-design.md
literec/: __init__.py  config.py  utils.py
literec/data/: __init__.py  dataloader.py  dataset.py  downloader.py
literec/evaluation/: __init__.py  evaluator.py
literec/model/: __init__.py  base.py  bpr.py  lightgcn.py  ngcf.py
literec/training/: __init__.py  trainer.py
tests/: conftest.py  test_config.py  test_dataloader.py  test_dataset.py  test_downloader.py  test_e2e.py  test_evaluator.py  test_models.py  test_trainer.py
