[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-rec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
progress = ["tqdm>=4.60"]
